--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,37 +9,44 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/4ea700da30.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Twitter</a>
+        <%= link_to(root_path) do %>
+          <i class="fab fa-twitter fa-2x"></i>
+        <% end %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <% if current_user %>
+                <%= link_to 'Logout', destroy_user_session_path, class: "nav-link", method: "delete" %>
+              <% else %>
+                <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+              <% end %>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+              <% if current_user %>
+                <%= link_to(edit_user_registration_path) do %>
+                  <%= image_tag(current_user.profile_picture, class: 'avatar-img') %>
+                <% end %>
+              <% end %>
             </li>
           </ul>
         </div>
       </nav>
 
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <!--<p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>-->
       <%= yield %>
     </div>
 
