Add gem faker and seed feature. Show action for tweets controller now is working and letting current__user edit tweets.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4ea700da30.js" crossorigin="anonymous"></script>
 
+    <!-- Favicon Tag -->
+    <%= favicon_link_tag asset_path('favicon.ico') %>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
