Added Faker users, and new features for UI on index action for tweets controller.

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -18,9 +18,10 @@
       <h5 class="card-title"><%= tweet.user.username %></h5>
       <p class="card-text"><%= tweet.content %></p>
       <%= link_to(tweet, :class => 'show') do %>
-      <p><%= time_ago_in_words(tweet.created_at) %> ago</p>
+      <p class="date"><%= time_ago_in_words(tweet.created_at) %> ago</p>
       <% end %>
-      <p>Retweets: <%= tweet.retweet %></p>
+      <p>Retweets: <%= tweet.retweet %> | Likes: <%= tweet.likes.count %></p>
+      <i class="far fa-heart"></i>
     </div>
   </div>
 <% end %>
