views,models,controllers,migrations changes

--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Like', new_like_path %>
+<%= link_to 'New Like', new_like_path(tweet), method: :post %> <%= tweet.likes.count %>
