--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -20,8 +20,9 @@
       <%= link_to(tweet, :class => 'show') do %>
       <p class="date"><%= time_ago_in_words(tweet.created_at) %> ago</p>
       <% end %>
-      <p>Retweets: <%= tweet.retweet %> | Likes: <%= tweet.likes.count %></p>
       <i class="far fa-heart"></i>
+       <%= link_to 'Like', tweet_like_url(tweet), method: :post %> <%= tweet.likes.count %>
+        <%= link_to 'Retweet', tweet_retweet_url(tweet), method: :post %>
     </div>
   </div>
 <% end %>
